# pdfparser-rs

./: .dockerignore  .env.example  .gitignore  CHEATSHEET.md  Cargo.toml  Dockerfile  README.md
docs/: LLM_INTEGRATION.md  LLM_QUICK_START.md
src/: lib.rs  main.rs
